--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -7,22 +7,32 @@ header {
 	background-repeat: no-repeat;
 }
 
-.hero {
+header .hero {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
 	height: 100%;
+	position: relative;
 }
-.hero-logo {
+header .hero-logo {
 	width: 150px;
 	height: 150px;
 }
-.hero-heading {
+header .hero-heading {
 	margin-top: 16px;
 	background: -webkit-linear-gradient(var(--color-white) 0%, var(--color-black1) 100%);
 	background-clip: text;
 	-webkit-text-fill-color: transparent;
 	color: var(--color-white);
+}
+
+header .scroll-link {
+	position: absolute;
+	color: var(--color-white);
+	bottom: 30px;
+	left: 50%;
+	transform: translateX(-50%);
+	animation: arrow-jump 2s infinite;
 }
