--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -2,7 +2,9 @@
 	width: 100%;
 	height: 100%;
 	position: relative;
-	border-radius: 100%;
 	background: url('../../assets/images/logo-white.svg') center center no-repeat;
 	background-size: 98%;
+	border-top: 30px solid var(--color-secondary);
+	border-bottom: 2px solid #fffffa;
+	border-radius: 100%;
 }
