--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -7,6 +7,7 @@
 
 	--color-lightgray: #e4e1e1dc;
 	--color-white: #fffffa;
+	--color-gray: #888888;
 	--color-black1: #24232b;
 	--color-black2: #282c34;
 }
@@ -29,6 +30,14 @@ body {
 	background-color: var(--color-black1);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+section {
+	height: 100vh;
+	background: var(--color-white);
+	color: var(--color-black1);
+	overflow: hidden;
+	padding: 80px 0;
 }
 
 h1,
