Add robot card and display generated result

--- a/src/components/create-robot/create-robot.css
+++ b/src/components/create-robot/create-robot.css
@@ -1,4 +1,35 @@
+.create-robot {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	width: 500px;
+	margin: 0 auto;
+}
 .create-robot .title {
 	text-align: center;
+	letter-spacing: -2px;
 	color: var(--color-primary);
+	margin-bottom: 22px;
+}
+.create-robot .title-icon {
+	margin-bottom: 12px;
+	font-size: 42px;
+	animation: spin 3.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
+}
+.create-robot .error-message,
+.create-robot .loading-message {
+	text-align: center;
+	letter-spacing: -2px;
+	color: var(--color-primary);
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(none);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
