--- a/src/components/input-box/input-box.css
+++ b/src/components/input-box/input-box.css
@@ -5,7 +5,7 @@
 	align-items: center;
 }
 .form-controller {
-	width: 380px;
+	width: 100%;
 	height: 50px;
 	display: flex;
 	justify-content: center;
@@ -18,12 +18,16 @@
 	padding: 16px;
 	font-size: 16px;
 	color: var(--color-gray);
+	background-color: #ffadadad;
+	letter-spacing: -1px;
+	font-weight: 500;
 	border: none;
 	font-family: 'Roboto Mono', Consolas, Monaco, monospace;
 }
 .input::placeholder {
 	font-weight: 400;
-	color: var(--color-lightgray);
+	color: var(--color-gray);
+	letter-spacing: -1px;
 }
 .input:focus,
 .btn-submit:focus {
