--- a/src/components/input-box/input-box.css
+++ b/src/components/input-box/input-box.css
@@ -4,6 +4,7 @@
 	justify-content: center;
 	align-items: center;
 }
+
 .form-controller {
 	width: 100%;
 	height: 50px;
@@ -12,27 +13,31 @@
 	align-items: center;
 	border: 2px solid var(--color-primary);
 }
+
 .input {
 	width: 100%;
 	height: 100%;
 	padding: 16px;
 	font-size: 16px;
 	color: var(--color-gray);
-	background-color: #ffadadad;
+	background-color: var(--color-primary-light);
 	letter-spacing: -1px;
 	font-weight: 500;
 	border: none;
 	font-family: 'Roboto Mono', Consolas, Monaco, monospace;
 }
+
 .input::placeholder {
 	font-weight: 400;
 	color: var(--color-gray);
 	letter-spacing: -1px;
 }
+
 .input:focus,
 .btn-submit:focus {
 	outline: none;
 }
+
 .btn-submit {
 	display: flex;
 	justify-content: center;
@@ -51,7 +56,7 @@
 	font-size: 22px;
 }
 
-.btn-submit:not(:disabled):hover > .input-icon {
+.form.loading .btn-submit > .input-icon {
 	animation: arrow-jump-forward 1s ease-in-out infinite;
 }
 
