Adding header and logo components and improving section-link stylest

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -17,7 +17,7 @@
 }
 
 .section-hero .heading {
-	margin-bottom: 50px;
-	align-self: flex-end;
 	color: var(--color-white);
+	max-width: 580px;
+	text-align: center;
 }
