Add footer component and refactor header

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 	--color-primary: #ff5252;
 	--color-secondary: #faedca;
 	--color-blue: #aff4f7;
-	--color-purple: #bd76ff;
+	--color-purple: #655b9c;
 	--color-pink: #f5b8b8;
 
 	--color-gray-main: #616161;
@@ -102,7 +102,18 @@ p {
 }
 
 a {
-	color: inherit;
+	text-decoration: none;
+	/* border-bottom: 1px solid var(--color-purple); */
+	color: var(--color-purple);
+}
+
+a:hover {
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23453886' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+	background-position: bottom;
+	background-repeat: repeat-x;
+	background-size: 15%;
+	border-bottom: 0;
+	padding-bottom: 0.3em;
 	text-decoration: none;
 }
 
@@ -112,18 +123,4 @@ a {
 	margin-left: auto;
 	padding-right: 20px;
 	padding-left: 20px;
-}
-
-.cool-link {
-	font-weight: 500;
-	text-decoration: none;
-	color: var(--color-blue);
-	background-image: linear-gradient(var(--color-blue), var(--color-blue));
-	background-repeat: no-repeat;
-	background-position: bottom left;
-	background-size: 0% 2px;
-	transition: background-size 300ms ease-in-out;
-}
-.cool-link:hover {
-	background-size: 100% 2px;
 }
