--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,8 +1,10 @@
-.section-hero {
-	height: 100vh;
-	width: 100%;
+.hero {
+	position: absolute;
+	top: 0;
+	left: 0;
 
-	position: relative;
+	height: 100%;
+	width: 100%;
 
 	display: flex;
 	justify-content: center;
@@ -16,7 +18,7 @@
 	overflow: hidden;
 }
 
-.section-hero .heading {
+.hero .heading {
 	color: var(--color-white);
 	max-width: 580px;
 	text-align: center;
