--- a/src/components/layout/header/header.css
+++ b/src/components/layout/header/header.css
@@ -1,13 +1,24 @@
 header {
+	position: relative;
+	height: 100vh;
+}
+
+header nav {
 	position: absolute;
 	top: 0;
 	left: 0;
 
-	width: 100%;
-	height: 60px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
-	padding: 16px 0;
+	height: 60px;
+	width: 100%;
+	margin: 32px 0;
 
 	z-index: 1;
-	overflow: hidden;
+}
+
+header nav .logo {
+	color: var(--color-secondary);
 }
