--- a/src/components/layout/footer/footer.css
+++ b/src/components/layout/footer/footer.css
@@ -4,9 +4,8 @@ footer {
 	left: 0;
 
 	width: 100%;
-	height: 60px;
-
-	padding: 16px;
+	height: 100px;
+	padding: 16px 0;
 
 	display: flex;
 	flex-direction: column;
