--- a/src/components/demo/demo.css
+++ b/src/components/demo/demo.css
@@ -4,21 +4,20 @@
 	justify-content: center;
 	align-items: center;
 
-	height: 100vh;
+	height: 90vh;
 	width: 100%;
 
 	background: var(--color-black1);
-	color: var(--color-black1);
+	color: var(--color-gray-light);
+}
 
-	margin: 0 auto;
+.section-demo .content {
+	max-width: 400px;
 }
 .section-demo .title {
 	text-align: center;
 	letter-spacing: -2px;
-
-	background: linear-gradient(to top, var(--color-pink), var(--color-purple));
-	background-clip: text;
-	-webkit-text-fill-color: transparent;
+	color: var(--color-pink);
 
 	margin-bottom: 22px;
 }
