--- a/src/components/layout/footer/footer.css
+++ b/src/components/layout/footer/footer.css
@@ -1,16 +1,19 @@
 footer {
 	position: absolute;
-	bottom: 10px;
+	top: 100%;
 	left: 0;
 
 	width: 100%;
-	height: 100px;
-	padding: 16px 0;
+
+	padding-top: 22px;
 
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
+	background: var(--color-black2);
+	border-top: 2px solid var(--color-black2);
 
 	z-index: 1;
 	overflow: hidden;
