--- a/src/components/search-box/search-box.css
+++ b/src/components/search-box/search-box.css
@@ -1,5 +1,6 @@
 .search-box {
 	height: 50px;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -9,30 +10,33 @@
 	position: relative;
 	width: 100%;
 	height: 50px;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	border: 3px solid transparent;
-	border-image: linear-gradient(135deg, var(--color-primary), var(--color-purple));
-	border-image-slice: 1;
+
+	border: 3px solid var(--color-primary);
 }
 
 .search-input {
 	width: 100%;
 	height: 100%;
+
 	padding: 16px;
-	font-size: 16px;
+
 	color: var(--color-gray-main);
 	background-color: var(--color-pink);
+	border: none;
+
+	font-size: 16px;
 	letter-spacing: -1px;
 	font-weight: 500;
-	border: none;
 	font-family: 'Roboto Mono', Consolas, Monaco, monospace;
 }
 
 .search-input::placeholder {
-	font-weight: 400;
 	color: var(--color-gray-light);
+	font-weight: 400;
 	letter-spacing: -1px;
 }
 
@@ -45,6 +49,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
 	position: relative;
 	height: 100%;
 	width: 50px;
