--- a/src/components/demo/demo.css
+++ b/src/components/demo/demo.css
@@ -4,15 +4,12 @@
 	justify-content: center;
 	align-items: center;
 
-	height: 90vh;
+	height: 100%;
 	width: 100%;
-
-	background: var(--color-black1);
-	color: var(--color-gray-light);
 }
 
 .section-demo .content {
-	max-width: 400px;
+	max-width: 380px;
 }
 .section-demo .title {
 	text-align: center;
