--- a/src/components/image-card/image-card.css
+++ b/src/components/image-card/image-card.css
@@ -7,7 +7,11 @@
 	margin-top: 22px;
 	margin-bottom: 22px;
 
-	background: linear-gradient(135deg, var(--color-primary), var(--color-purple));
+	background: linear-gradient(
+		135deg,
+		var(--color-primary),
+		var(--color-purple)
+	);
 	border: 3px solid var(--color-pink);
 
 	display: flex;
